conf/srv/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-home-deploy
  labels:
    deploy: web-home
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: web-home
  template:
    metadata:
      labels:
        pod: web-home
    spec:
      containers:
      - name: web-home-pod
        image: gonnux/web-home
        ports:
        - containerPort: 3000
