conf/srv/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-home
  labels:
    app: web-home
spec:
  selector:
    app: web-home
  ports:
  - port: 3000
    targetPort: 3000
