conf/srv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-home
spec:
  defaultBackend:
    service:
      name: web-home
      port:
        number: 3000
